--- a/Pokemon/Pokemon/Storyboards/Base.lproj/Main.storyboard
+++ b/Pokemon/Pokemon/Storyboards/Base.lproj/Main.storyboard
@@ -45,7 +45,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="HomeCollectionViewCell" id="of4-Ah-9hi" customClass="MainCollectionViewCell" customModule="Pokemon" customModuleProvider="target">
+                                    <collectionViewCell opaque="NO" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="MainCollectionViewCell" id="of4-Ah-9hi" customClass="MainCollectionViewCell" customModule="Pokemon" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="95" height="134"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="K0b-52-Fe0">
